Update for Java 11 compatibility and code optimization