@@ -2,6 +2,7 @@ package client.model;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import client.view.map.LoadResult;
 
@@ -50,7 +51,7 @@ public class GameRoom {
 	}
 
 	public List<String> getPlayerNames() {
-		return players.stream().map(p -> p.getName()).toList();
+		return players.stream().map(p -> p.getName()).collect(Collectors.toList());
 	}
 	
 	public int getReadyToPlayCount() {
